Image removed, content changed

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
   <table cellspacing="20" >
     <tr>
-      <td><img src="Rohith.jpg" alt="Founder's profile picture" height="200px" width="150px"></td>
       <td>
         <h1>Sai Rohith Muthyala </h1>
         <p><em><strong>Founder of this website</strong></em></p>
         <p>
-          I'm an employee working in the top IT company "TATA Consultancy Services".I did my graduation in Electronics and Communication from
-          Government Engineering College,Gandhinagar.Since, the resposibilities are diverse enough in my current job, I'm getting lot of experience. It includes Testing, Automation, Business understanding , coding concepts and lot more.I am also equally participating in other activities pertaining to
-          social and Sub-PAG level activities.
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Erat nam at lectus urna duis convallis convallis. Sem integer vitae justo eget magna
         </p>
       </td>
     </tr>
@@ -47,7 +45,7 @@
     <tbody>
       <tr>
         <td>2021-Present</td>
-        <td>Quality Assurance Engineer at TCS Ltd.</td>
+        <td>mod temp</td>
       </tr>
     </tbody>
   </table>
