--- a/ContactMe.html
+++ b/ContactMe.html
@@ -9,7 +9,7 @@
   <p>Email ID: nothing@gmail.com</p>
   <p>Phone No.: 76473829xx </p>
   <hr>
-  <form action="mailto:kaikun12abd@gmail.com" method="post" enctype="text/plain">
+  <form method="post" enctype="text/plain">
   <label>Your Name:</label>
   <input type="text"  name="YourName" value=""><br>
   <label>Your Email:</label>
